# gbemulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gbemulator_root.myroot
include/core/: 2C02Processor.h  apu.h  bus.h  cartridge.h  constants.h  controller.h  serializable.h  timer.h  z80Processor.h
include/core/audio/: circularBuffer.h  noiseChannel.h  pulseChannel.h  registers.h  waveChannel.h
include/core/mappers/: mapperBase.h  mapperFactory.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h  nullMapper.h
include/core/utils/: disassenbly.h  fileVisitor.h  instLogger.h  memoryVisitor.h  sha1.h  tile.h  utils.h  vectorVisitor.h  visitor.h
include/exe/: common.h  controller.h  imguiManager.h  mainWindow.h  screen.h  utils.h  window.h
include/exe/SDL/: controllerSDL.h  mainWindowSDL.h
include/exe/audio/: audioSystem.h  gbAudioSystem.h
include/exe/imguiWindows/: debugWindow.h  findRomsWindow.h  imguiWindow.h  oamWindow.h  ramWindow.h  tileDataWindow.h
include/exe/messageService/: coreMessageService.h  message.h  messageService.h  screenMessageService.h
include/exe/messageService/messages/: coreMessage.h  corePayload.h  debugMessage.h  debugPayload.h  screenMessage.h  screenPayload.h
include/exe/rendering/: defaultShadersPrg.h  image.h  shaders.h
include/exe/windows/: debugWindow.h  ramWindow.h
src/: CMakeLists.txt
src/audio/: CMakeLists.txt  main.cpp
src/core/: 2C02Processor.cpp  CMakeLists.txt  apu.cpp  bus.cpp  cartridge.cpp  controller.cpp  timer.cpp  z80Processor.cpp
src/core/audio/: noiseChannel.cpp  pulseChannel.cpp  waveChannel.cpp
src/core/mappers/: mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp
src/core/utils/: disassembly.cpp  fileVisitor.cpp  instLogger.cpp  memoryVisitor.cpp  sha1.cpp  vectorVisitor.cpp
src/exe/: CMakeLists.txt  controller.cpp  imguiManager.cpp  main.cpp  mainWindow.cpp  screen.cpp  window.cpp
src/exe/SDL/: controllerSDL.cpp  mainWindowSDL.cpp
src/exe/audio/: audioSystem.cpp  gbAudioSystem.cpp
src/exe/imguiWindows/: debugWindow.cpp  findRomsWindow.cpp  imguiWindow.cpp  oamWindow.cpp  ramWindow.cpp  tileDataWindow.cpp
src/exe/messageService/: coreMessageService.cpp  messageService.cpp  screenMessageService.cpp
src/exe/rendering/: image.cpp  shader.cpp
src/exe/windows/: debugWindow.cpp  ramWindow.cpp
src/libretro_core/: CMakeLists.txt  libretro.cpp
src/sdl_exe/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  common.h  main.cpp
tests/asm/: compile_all.bat  compile_all.sh  compile_asm.py
tests/asm/CPUTests/: arithmetic_test.asm  arithmetic_test.cpp  ld_test.asm  ld_test.cpp
tests/asm/HelloWorld/: helloworld_ScrlXButton.asm  helloworld_halt.asm  helloworld_shake.asm  helloworld_window.asm
tests/asm/HelloWorld_ScrlButton/: helloworld_ScrlXButton.asm
tests/asm/HelloWorld_ScrlX/: helloworld_ScrlX.asm
tests/external_roms/: gb_cartridge_generator.py  generated.gb
tests/external_roms/cpu_inst/: readme.txt
tests/external_roms/dmg_sound/: dmg_sound.sav
tests/external_roms/dmg_sound/rom_singles/: 02-len ctr.sav
